<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MAIN -->
    <string name="app_name">Delta Fountains</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="controls">Controls</string>
    <string name="functions">Functions</string>
    <string name="support">Support</string>

    <!-- CONTROLS -->
    <string name="title_activity_controls">Controls</string>
    <string name="xValue">X:</string>
    <string name="yValue">Y:</string>
    <string name="angle">Angle:</string>
    <string name="dir">Direction:</string>
    <string name="dis">Distance:</string>

    <!-- FUNCTIONS -->
    <string name="title_activity_functions">Functions</string>

    <!-- SUPPORT -->
    <string name="title_activity_support">Support</string>
    <string name="help">Help</string>
    <string name="conHelp">Controls - Takes you to the manual control</string>
    <string name="funHelp">Functions - Takes you to fountain patterns</string>
    <string name="clw">CLW - Clockwise</string>
    <string name="cclw">CCLW - Counter Clockwise</string>
    <string name="ns">N/S - North to South</string>
    <string name="ew">E/W - East to West</string>
    <string name="title_activity_settings">Settings</string>
    
    <!-- SETTINGS -->
    <string name="settings">Settings</string>
    <string name="ip">IP Address: </string>
    <string name="port">Port: </string>
    <string name="ip_hint">192.168.0.1</string>
    <string name="p_hint">43000</string>
    <string name="set">Set</string>

</resources>
